; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-properties.c_obs_property_list_add_int.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-properties.c_obs_property_list_add_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.list_data = type { i64 }

@OBS_COMBO_FORMAT_INT = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @obs_property_list_add_int(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.list_data*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = call %struct.list_data* @get_list_data(i32* %9)
  store %struct.list_data* %10, %struct.list_data** %8, align 8
  %11 = load %struct.list_data*, %struct.list_data** %8, align 8
  %12 = icmp ne %struct.list_data* %11, null
  br i1 %12, label %13, label %23

13:                                               ; preds = %3
  %14 = load %struct.list_data*, %struct.list_data** %8, align 8
  %15 = getelementptr inbounds %struct.list_data, %struct.list_data* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* @OBS_COMBO_FORMAT_INT, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %23

19:                                               ; preds = %13
  %20 = load %struct.list_data*, %struct.list_data** %8, align 8
  %21 = load i8*, i8** %6, align 8
  %22 = call i64 @add_item(%struct.list_data* %20, i8* %21, i64* %7)
  store i64 %22, i64* %4, align 8
  br label %24

23:                                               ; preds = %13, %3
  store i64 0, i64* %4, align 8
  br label %24

24:                                               ; preds = %23, %19
  %25 = load i64, i64* %4, align 8
  ret i64 %25
}

declare dso_local %struct.list_data* @get_list_data(i32*) #1

declare dso_local i64 @add_item(%struct.list_data*, i8*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
